--- a/templatesold/homepage.html
+++ b/templatesold/homepage.html
@@ -3,7 +3,7 @@
 <head>
     <!-- Removed Django-specific tags for loading static and bootstrap components -->
 
-    <link rel="stylesheet" href="/static/homepage.css">
+    <link rel="stylesheet" href="styles/homepage.css">
     <!-- Using CDN for Bootstrap which is common in Flask as well -->
    <!-- Bootstrap CSS -->
 <!-- Latest compiled and minified Bootstrap CSS -->
